Use xxh3 hashing